# rust-tools

./: .gitignore  Cargo.toml  README.md
my-git-utils/: Cargo.toml  README.md
my-git-utils/src/: main.rs
my-git-utils/src/commands/: pull.rs  setup_profile.rs
my-git-utils/src/modules/: config_utils.rs  spawn_utils.rs
my-infra-aws/: .gitignore  Cargo.toml
my-infra-aws/src/: commands.rs  main.rs  utils.rs
my-infra-aws/src/commands/: ec2.rs  ecr.rs
my-infra-aws/src/commands/ec2/: index_command.rs  start_command.rs  stop_command.rs
my-infra-aws/src/commands/ecr/: cleanup_command.rs
my-infra-aws/src/utils/: aws_client.rs  ec2_client.rs  ec2_index.rs  hosts.rs
