[package]
name = "rust-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.11.6"
git2 = "0.20.0"
inquire = "0.7.5"
log = "0.4.25"
seahorse = "2.1"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
