[package]
name = "my-infra-aws"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.5.18", features = ["behavior-version-latest"] }
aws-sdk-ec2 = "1.116.0"
dotenv = "0.15.0"
env_logger = "0.11.7"
log = "0.4.26"
nix = {version = "0.29.0", features=["user"]}
seahorse = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["full"] }
